versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Summand.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalSummand
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function SummandDefaultConst() &
      bind(C, name='SummandDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function SummandDefaultConst

!! Create, default
function SummandDefault() &
      bind(C, name='SummandDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function SummandDefault

!! Create, general, const
function SummandCreateConst( &
   ENDF_MFMT, &
   coefficient, &
   href, &
   ENDF_MFMTSize, &
   coefficientSize, &
   hrefSize &
) &
      bind(C, name='SummandCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: ENDF_MFMTSize
   character(c_char), intent(in) :: ENDF_MFMT(ENDF_MFMTSize)
   integer(c_size_t), intent(in), value :: coefficientSize
   character(c_char), intent(in) :: coefficient(coefficientSize)
   integer(c_size_t), intent(in), value :: hrefSize
   character(c_char), intent(in) :: href(hrefSize)
   type(c_ptr) :: handle
end function SummandCreateConst

!! Create, general
function SummandCreate( &
   ENDF_MFMT, &
   coefficient, &
   href, &
   ENDF_MFMTSize, &
   coefficientSize, &
   hrefSize &
) &
      bind(C, name='SummandCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: ENDF_MFMTSize
   character(c_char), intent(in) :: ENDF_MFMT(ENDF_MFMTSize)
   integer(c_size_t), intent(in), value :: coefficientSize
   character(c_char), intent(in) :: coefficient(coefficientSize)
   integer(c_size_t), intent(in), value :: hrefSize
   character(c_char), intent(in) :: href(hrefSize)
   type(c_ptr) :: handle
end function SummandCreate

!! Assign
subroutine SummandAssign(handleLHS, handleRHS) &
      bind(C, name='SummandAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine SummandAssign

!! Delete
subroutine SummandDelete(handle) &
      bind(C, name='SummandDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine SummandDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function SummandRead(handle, filename, filenameSize) &
      bind(C, name='SummandRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function SummandRead

!! Write to file
function SummandWrite(handle, filename, filenameSize) &
      bind(C, name='SummandWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function SummandWrite

!! Print to standard output, in our prettyprinting format
function SummandPrint(handle) &
      bind(C, name='SummandPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function SummandPrint

!! Print to standard output, as XML
function SummandPrintXML(handle) &
      bind(C, name='SummandPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function SummandPrintXML

!! Print to standard output, as JSON
function SummandPrintJSON(handle) &
      bind(C, name='SummandPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function SummandPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: ENDF_MFMT
!! -----------------------------------------------------------------------------

!! Has
function SummandENDFMFMTHas(handle) &
      bind(C, name='SummandENDFMFMTHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function SummandENDFMFMTHas

!! Get
function SummandENDFMFMTGet(handle) &
      bind(C, name='SummandENDFMFMTGet') &
      result(ENDF_MFMT)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: ENDF_MFMT
end function SummandENDFMFMTGet

!! Set
subroutine SummandENDFMFMTSet(handle, ENDF_MFMT, ENDF_MFMTSize) &
      bind(C, name='SummandENDFMFMTSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: ENDF_MFMTSize
   character(c_char), intent(in) :: ENDF_MFMT(ENDF_MFMTSize)
end subroutine SummandENDFMFMTSet


!! -----------------------------------------------------------------------------
!! Metadatum: coefficient
!! -----------------------------------------------------------------------------

!! Has
function SummandCoefficientHas(handle) &
      bind(C, name='SummandCoefficientHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function SummandCoefficientHas

!! Get
function SummandCoefficientGet(handle) &
      bind(C, name='SummandCoefficientGet') &
      result(coefficient)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: coefficient
end function SummandCoefficientGet

!! Set
subroutine SummandCoefficientSet(handle, coefficient, coefficientSize) &
      bind(C, name='SummandCoefficientSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: coefficientSize
   character(c_char), intent(in) :: coefficient(coefficientSize)
end subroutine SummandCoefficientSet


!! -----------------------------------------------------------------------------
!! Metadatum: href
!! -----------------------------------------------------------------------------

!! Has
function SummandHrefHas(handle) &
      bind(C, name='SummandHrefHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function SummandHrefHas

!! Get
function SummandHrefGet(handle) &
      bind(C, name='SummandHrefGet') &
      result(href)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: href
end function SummandHrefGet

!! Set
subroutine SummandHrefSet(handle, href, hrefSize) &
      bind(C, name='SummandHrefSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: hrefSize
   character(c_char), intent(in) :: href(hrefSize)
end subroutine SummandHrefSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalSummand
